@@ -1,3 +1,9 @@
+2006-03-07  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
+	PR libgfortran/26554
+	* io/list_read.c (read_logical): Return the value if not in namelist
+	mode.
+
 2006-03-04  Francois-Xavier Coudert  <coudert@clipper.ens.fr>
 
 	PR libfortran/21303
